--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,13 +102,19 @@ footer{
     font-size:0.7em;
 }
 
+.clearfix:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
 /***********************************************************
 				    Hamburger Menu
 ***********************************************************/
 
 
 nav{
-    height:60px;
+    /*height:60px;*/
     position:relative;
 }
 
@@ -192,5 +198,23 @@ nav ul{
     /* hide the hamburger button and turn the menu into a normal menu */
     .hamburger{
         display:none;
+    }
+
+    nav ul{
+        display:block;
+    }
+
+    #menuchecker:checked + ul{
+        /* in case the menu is open when the site is resized, override the position on the menu */
+        position:static;
+    }
+
+    nav ul li{
+        float:left;
+        margin:20px 10px 0; /* three values: top / left-right / bottom */
+    }
+
+    nav ul li a{
+        text-decoration:none;
     }
 }
